# latchkey

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  flake.nix  justfile
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/operator/: Cargo.toml
crates/operator/src/: crd.rs  main.rs
crates/tool-server/: Cargo.toml
crates/tool-server/src/: main.rs
crates/upstream-stub/: Cargo.toml
crates/upstream-stub/src/: main.rs
deploy/kustomize/base/: kustomization.yaml  namespace.yaml
deploy/kustomize/base/crds/: latchkeypolicies.yaml  latchkeyprincipals.yaml  latchkeyservers.yaml  latchkeytools.yaml
deploy/kustomize/base/gateway/: deployment.yaml  service.yaml
deploy/kustomize/base/networkpolicy/: milestone1-allow.yaml
deploy/kustomize/base/operator/: deployment.yaml
deploy/kustomize/base/rbac/: gateway-rbac.yaml  operator-rbac.yaml
deploy/kustomize/base/serviceaccounts/: gateway.yaml  operator.yaml
deploy/kustomize/base/tool-server/: deployment.yaml  service.yaml
deploy/kustomize/base/upstream-stub/: deployment.yaml  service.yaml
deploy/kustomize/overlays/dev/: kustomization.yaml  patch-gateway-resources.yaml  patch-operator-resources.yaml  redis-optional-stub.yaml
docs/: architecture.md  contributing.md  crds.md  operations.md  security.md  spec.md
docs/adr/: 0001-language.md  0002-auth-model.md  0003-milestone1-thin-slice.md
