[workspace]
members = [
  "crates/core",
  "crates/gateway",
  "crates/operator",
  "crates/tool-server",
  "crates/upstream-stub",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.7.9"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["v1_30"] }
kube = { version = "0.96.0", features = ["runtime", "derive", "rustls-tls"] }
kube-runtime = "0.96.0"
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.2", features = ["limit", "request-id", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
