[package]
name = "latchkey-operator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
kube-runtime.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
